# json-parser

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  Makefile  Makefile.in  README.md  build_linux.sh  configure  configure.ac  json-parser-cmake.pc.in  json-parser.pc.in  json.c  json.h
.github/workflows/: codeql-analysis.yml  main.yml
bindings/python/: jsonparser.pyx  setup.py  wrap_json.c
bindings/python/example/: test.py
examples/: test_json  test_json.c
tests/: ext-invalid-0000.json  ext-invalid-0001.json  ext-invalid-0002.json  ext-valid-0000.json  ext-valid-0001.json  ext-valid-0002.json  ext-valid-0003.json  invalid-0003.json  invalid-0007.json  invalid-0011.json  invalid-0012.json  test.c  test.py  test_json.c  test_more.py  valid-0002.json  valid-0003.json  valid-0005.json  valid-0007.json  valid-0012.json  valid-0013.json
